editors/tree-sitter/test/corpus/ebnf_extra.txt
==================
Remaining EBNF declarations and expression forms
==================
pub async proc ready() -> bool {
  give true;
}

use demo::{one, two as second,};
export {one, second as public_second,};
extern "C" proc c_call(value: ref mut i32) -> void;
intrinsic size(value: *u8) -> usize;
opaque Handle<T> where T: Copy;
type Alias<T> where T: Copy = [4]T;

trait Convert<T> where T: Copy {
  proc convert(value: T) -> T {
    give value;
  }
}

impl<T> Convert<T> for Pair<T> where T: Copy {
  proc convert(value: T) -> T {
    give value;
  }
}

macro log(value: string) {
  defer {
    assert(value != "");
  }
}

test parser_test {
  let values: [4]i32 = [1, 2, 3, 4,];
  let mut value = convert(values[0]).field?;
  set value = (value + 1) << 2;
  if value > 0 and value != 3 or false {
    set value |= 1;
  } else {
    set value ^= 1;
  }
  while value < 10 {
    set value += 1;
    break;
  }
  loop {
    continue;
  }
  for item in 0..=3 {
    defer item;
  }
  match value {
    0 => { give 0; },
    _ => value,
  }
  unsafe {
    asm("nop", value);
  }
}
---

(source_file
  (declaration
    (modifier)
    (modifier)
    (declaration_body
      (procedure_declaration
        (identifier)
        (parameter_list)
        (type
          (path_type
            (path
              (identifier))))
        (block
          (statement
            (return_statement
              (expression
                (coalesce_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (literal)))))))))))))))))))))))
  (declaration
    (declaration_body
      (use_declaration
        (module_path)
        (path_alias
          (path
            (identifier)))
        (path_alias
          (path
            (identifier))
          (identifier)))))
  (declaration
    (declaration_body
      (export_declaration
        (path_alias
          (path
            (identifier)))
        (path_alias
          (path
            (identifier))
          (identifier)))))
  (declaration
    (declaration_body
      (external_procedure_declaration
        (string_literal)
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type
              (reference_type
                (type
                  (path_type
                    (path
                      (identifier))))))))
        (type
          (path_type
            (path
              (identifier)))))))
  (declaration
    (declaration_body
      (intrinsic_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type
              (pointer_type
                (type
                  (path_type
                    (path
                      (identifier))))))))
        (type
          (path_type
            (path
              (identifier)))))))
  (declaration
    (declaration_body
      (opaque_declaration
        (identifier)
        (generic_parameters
          (generic_parameter
            (identifier)))
        (where_clause
          (type
            (path_type
              (path
                (identifier))))
          (type
            (path_type
              (path
                (identifier))))))))
  (declaration
    (declaration_body
      (type_declaration
        (identifier)
        (generic_parameters
          (generic_parameter
            (identifier)))
        (where_clause
          (type
            (path_type
              (path
                (identifier))))
          (type
            (path_type
              (path
                (identifier)))))
        (type
          (array_type
            (expression
              (coalesce_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (range_expression
                                      (unary_expression
                                        (postfix_expression
                                          (primary_expression
                                            (literal
                                              (integer_literal))))))))))))))))))
            (type
              (path_type
                (path
                  (identifier)))))))))
  (declaration
    (declaration_body
      (trait_declaration
        (identifier)
        (generic_parameters
          (generic_parameter
            (identifier)))
        (where_clause
          (type
            (path_type
              (path
                (identifier))))
          (type
            (path_type
              (path
                (identifier)))))
        (declaration_block
          (declaration
            (declaration_body
              (procedure_declaration
                (identifier)
                (parameter_list
                  (parameter
                    (identifier)
                    (type
                      (path_type
                        (path
                          (identifier))))))
                (type
                  (path_type
                    (path
                      (identifier))))
                (block
                  (statement
                    (return_statement
                      (expression
                        (coalesce_expression
                          (logical_or_expression
                            (logical_and_expression
                              (bitwise_or_expression
                                (bitwise_xor_expression
                                  (bitwise_and_expression
                                    (equality_expression
                                      (comparison_expression
                                        (shift_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (range_expression
                                                (unary_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (path
                                                        (identifier))))))))))))))))))))))))))))
  (declaration
    (declaration_body
      (implementation_declaration
        (generic_parameters
          (generic_parameter
            (identifier)))
        (type
          (path_type
            (path
              (identifier))
            (type
              (path_type
                (path
                  (identifier))))))
        (type
          (path_type
            (path
              (identifier))
            (type
              (path_type
                (path
                  (identifier))))))
        (where_clause
          (type
            (path_type
              (path
                (identifier))))
          (type
            (path_type
              (path
                (identifier)))))
        (declaration_block
          (declaration
            (declaration_body
              (procedure_declaration
                (identifier)
                (parameter_list
                  (parameter
                    (identifier)
                    (type
                      (path_type
                        (path
                          (identifier))))))
                (type
                  (path_type
                    (path
                      (identifier))))
                (block
                  (statement
                    (return_statement
                      (expression
                        (coalesce_expression
                          (logical_or_expression
                            (logical_and_expression
                              (bitwise_or_expression
                                (bitwise_xor_expression
                                  (bitwise_and_expression
                                    (equality_expression
                                      (comparison_expression
                                        (shift_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (range_expression
                                                (unary_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (path
                                                        (identifier))))))))))))))))))))))))))))
  (declaration
    (declaration_body
      (macro_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type
              (path_type
                (path
                  (identifier))))))
        (block
          (statement
            (defer_statement
              (block
                (statement
                  (assert_statement
                    (expression
                      (coalesce_expression
                        (logical_or_expression
                          (logical_and_expression
                            (bitwise_or_expression
                              (bitwise_xor_expression
                                (bitwise_and_expression
                                  (equality_expression
                                    (comparison_expression
                                      (shift_expression
                                        (additive_expression
                                          (multiplicative_expression
                                            (range_expression
                                              (unary_expression
                                                (postfix_expression
                                                  (primary_expression
                                                    (path
                                                      (identifier))))))))))
                                    (comparison_expression
                                      (shift_expression
                                        (additive_expression
                                          (multiplicative_expression
                                            (range_expression
                                              (unary_expression
                                                (postfix_expression
                                                  (primary_expression
                                                    (literal
                                                      (string_literal)))))))))))))))))))))))))))
  (declaration
    (declaration_body
      (test_declaration
        (identifier)
        (block
          (statement
            (let_statement
              (identifier)
              (type
                (array_type
                  (expression
                    (coalesce_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (range_expression
                                            (unary_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (literal
                                                    (integer_literal))))))))))))))))))
                  (type
                    (path_type
                      (path
                        (identifier))))))
              (expression
                (coalesce_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (array_literal
                                                (expression
                                                  (coalesce_expression
                                                    (logical_or_expression
                                                      (logical_and_expression
                                                        (bitwise_or_expression
                                                          (bitwise_xor_expression
                                                            (bitwise_and_expression
                                                              (equality_expression
                                                                (comparison_expression
                                                                  (shift_expression
                                                                    (additive_expression
                                                                      (multiplicative_expression
                                                                        (range_expression
                                                                          (unary_expression
                                                                            (postfix_expression
                                                                              (primary_expression
                                                                                (literal
                                                                                  (integer_literal))))))))))))))))))
                                                (expression
                                                  (coalesce_expression
                                                    (logical_or_expression
                                                      (logical_and_expression
                                                        (bitwise_or_expression
                                                          (bitwise_xor_expression
                                                            (bitwise_and_expression
                                                              (equality_expression
                                                                (comparison_expression
                                                                  (shift_expression
                                                                    (additive_expression
                                                                      (multiplicative_expression
                                                                        (range_expression
                                                                          (unary_expression
                                                                            (postfix_expression
                                                                              (primary_expression
                                                                                (literal
                                                                                  (integer_literal))))))))))))))))))
                                                (expression
                                                  (coalesce_expression
                                                    (logical_or_expression
                                                      (logical_and_expression
                                                        (bitwise_or_expression
                                                          (bitwise_xor_expression
                                                            (bitwise_and_expression
                                                              (equality_expression
                                                                (comparison_expression
                                                                  (shift_expression
                                                                    (additive_expression
                                                                      (multiplicative_expression
                                                                        (range_expression
                                                                          (unary_expression
                                                                            (postfix_expression
                                                                              (primary_expression
                                                                                (literal
                                                                                  (integer_literal))))))))))))))))))
                                                (expression
                                                  (coalesce_expression
                                                    (logical_or_expression
                                                      (logical_and_expression
                                                        (bitwise_or_expression
                                                          (bitwise_xor_expression
                                                            (bitwise_and_expression
                                                              (equality_expression
                                                                (comparison_expression
                                                                  (shift_expression
                                                                    (additive_expression
                                                                      (multiplicative_expression
                                                                        (range_expression
                                                                          (unary_expression
                                                                            (postfix_expression
                                                                              (primary_expression
                                                                                (literal
                                                                                  (integer_literal)))))))))))))))))))))))))))))))))))))
          (statement
            (let_statement
              (identifier)
              (expression
                (coalesce_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (postfix_expression
                                              (postfix_expression
                                                (postfix_expression
                                                  (primary_expression
                                                    (path
                                                      (identifier))))
                                                (expression
                                                  (coalesce_expression
                                                    (logical_or_expression
                                                      (logical_and_expression
                                                        (bitwise_or_expression
                                                          (bitwise_xor_expression
                                                            (bitwise_and_expression
                                                              (equality_expression
                                                                (comparison_expression
                                                                  (shift_expression
                                                                    (additive_expression
                                                                      (multiplicative_expression
                                                                        (range_expression
                                                                          (unary_expression
                                                                            (postfix_expression
                                                                              (postfix_expression
                                                                                (primary_expression
                                                                                  (path
                                                                                    (identifier))))
                                                                              (expression
                                                                                (coalesce_expression
                                                                                  (logical_or_expression
                                                                                    (logical_and_expression
                                                                                      (bitwise_or_expression
                                                                                        (bitwise_xor_expression
                                                                                          (bitwise_and_expression
                                                                                            (equality_expression
                                                                                              (comparison_expression
                                                                                                (shift_expression
                                                                                                  (additive_expression
                                                                                                    (multiplicative_expression
                                                                                                      (range_expression
                                                                                                        (unary_expression
                                                                                                          (postfix_expression
                                                                                                            (primary_expression
                                                                                                              (literal
                                                                                                                (integer_literal))))))))))))))))))))))))))))))))))
                                              (identifier)))))))))))))))))))
          (statement
            (set_statement
              (expression
                (assignment_expression
                  (coalesce_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (range_expression
                                          (unary_expression
                                            (postfix_expression
                                              (primary_expression
                                                (path
                                                  (identifier)))))))))))))))))
                  (expression
                    (coalesce_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (range_expression
                                            (unary_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (parenthesized_expression
                                                    (expression
                                                      (coalesce_expression
                                                        (logical_or_expression
                                                          (logical_and_expression
                                                            (bitwise_or_expression
                                                              (bitwise_xor_expression
                                                                (bitwise_and_expression
                                                                  (equality_expression
                                                                    (comparison_expression
                                                                      (shift_expression
                                                                        (additive_expression
                                                                          (multiplicative_expression
                                                                            (range_expression
                                                                              (unary_expression
                                                                                (postfix_expression
                                                                                  (primary_expression
                                                                                    (path
                                                                                      (identifier)))))))
                                                                          (multiplicative_expression
                                                                            (range_expression
                                                                              (unary_expression
                                                                                (postfix_expression
                                                                                  (primary_expression
                                                                                    (literal
                                                                                      (integer_literal)))))))))))))))))))))))))
                                      (additive_expression
                                        (multiplicative_expression
                                          (range_expression
                                            (unary_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (literal
                                                    (integer_literal))))))))))))))))))))))
          (statement
            (if_statement
              (expression
                (coalesce_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (path
                                                (identifier)))))))))
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (literal
                                                (integer_literal))))))))))))))
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (path
                                                (identifier))))))))))
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (literal
                                                (integer_literal)))))))))))))))
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (literal)))))))))))))))))
              (block
                (statement
                  (set_statement
                    (expression
                      (assignment_expression
                        (coalesce_expression
                          (logical_or_expression
                            (logical_and_expression
                              (bitwise_or_expression
                                (bitwise_xor_expression
                                  (bitwise_and_expression
                                    (equality_expression
                                      (comparison_expression
                                        (shift_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (range_expression
                                                (unary_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (path
                                                        (identifier)))))))))))))))))
                        (expression
                          (coalesce_expression
                            (logical_or_expression
                              (logical_and_expression
                                (bitwise_or_expression
                                  (bitwise_xor_expression
                                    (bitwise_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (shift_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (range_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (literal
                                                          (integer_literal)))))))))))))))))))))))
              (block
                (statement
                  (set_statement
                    (expression
                      (assignment_expression
                        (coalesce_expression
                          (logical_or_expression
                            (logical_and_expression
